--- a/DRV8323.ioc
+++ b/DRV8323.ioc
@@ -107,7 +107,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -118,17 +118,16 @@ RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=16000000
 RCC.HSICECFreq_Value=32786.88524590164
 RCC.I2SFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=48000000
-RCC.PLLCLKFreq_Value=32000000
-RCC.PLLMCOFreq_Value=32000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLCLKFreq_Value=16000000
+RCC.PLLMCOFreq_Value=16000000
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.USART2Freq_Value=48000000
-RCC.VCOOutput2Freq_Value=16000000
+RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
@@ -141,7 +140,7 @@ SPI1.VirtualType=VM_MASTER
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Prescaler
 TIM15.Prescaler=47
-USART3.BaudRate=115200
+USART3.BaudRate=9600
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_TIM15_VS_ClockSourceINT.Mode=Internal
