--- a/DRV8323.ioc
+++ b/DRV8323.ioc
@@ -46,8 +46,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
-PA4.Mode=NSS_Signal_Hard_Output
-PA4.Signal=SPI1_NSS
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=DRV_CS
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -130,12 +132,11 @@ RCC.USART2Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CalculateBaudRate=3.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CalculateBaudRate=1.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Prescaler
