--- a/DRV8323.ioc
+++ b/DRV8323.ioc
@@ -132,10 +132,11 @@ RCC.USART2Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI1.CalculateBaudRate=1.5 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CalculateBaudRate=375.0 KBits/s
+SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
