--- a/DRV8323.ioc
+++ b/DRV8323.ioc
@@ -11,8 +11,9 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
 Mcu.IP4=TIM15
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP5=TIM17
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F071V(8-B)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PF9
@@ -22,6 +23,7 @@ Mcu.Pin11=PA14
 Mcu.Pin12=PD0
 Mcu.Pin13=PD7
 Mcu.Pin14=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin2=PF1-OSC_OUT
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
@@ -30,7 +32,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
 Mcu.Pin9=PD8
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F071VBTx
@@ -142,10 +144,14 @@ SPI1.VirtualType=VM_MASTER
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Prescaler
 TIM15.Prescaler=47
+TIM17.IPParameters=Prescaler
+TIM17.Prescaler=47
 USART3.BaudRate=9600
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 board=custom
 isbadioc=false
