--- a/DRV8323.ioc
+++ b/DRV8323.ioc
@@ -18,12 +18,13 @@ Mcu.Name=STM32F071V(8-B)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PF9
 Mcu.Pin1=PF0-OSC_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PD0
-Mcu.Pin13=PD7
-Mcu.Pin14=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin10=PD8
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PD0
+Mcu.Pin14=PD7
+Mcu.Pin15=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin2=PF1-OSC_OUT
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
@@ -31,8 +32,8 @@ Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
-Mcu.Pin9=PD8
-Mcu.PinsNb=16
+Mcu.Pin9=PE13
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F071VBTx
@@ -74,6 +75,10 @@ PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=DRV_BRAKE
 PD8.Locked=true
 PD8.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=DRV_CALL
+PE13.Locked=true
+PE13.Signal=GPIO_Output
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -111,7 +116,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM17_Init-TIM17-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
